--- a/index.html
+++ b/index.html
@@ -20,10 +20,19 @@
                 <h3>Login</h3>
             </div>
             <form id="loginForm">
-                <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="loginEmail" placeholder="Username / email" required></div>
-                <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="loginPass" placeholder="Password" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('loginPass', this)"></i></div>
-                <div class="auth-actions"><button type="submit" class="btn-pill primary">Login</button></div>
-                <div class="auth-footer">Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span></div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-user"></i>
+                    <input type="text" id="loginEmail" placeholder="Username / email" required>
+                </div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-key"></i>
+                    <input type="password" id="loginPass" placeholder="Password" required>
+                    <i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('loginPass', this)"></i>
+                </div>
+                <div class="auth-actions">
+                    <button type="submit" class="btn-pill primary">Login</button>
+                    <div class="auth-footer">Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span></div>
+                </div>
             </form>
         </div>
     </section>
@@ -40,8 +49,7 @@
                 <div class="pill-input"><i class="fa-solid fa-phone"></i><input type="tel" id="regPhone" placeholder="Phone"></div>
                 <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="regPass" placeholder="Password" required minlength="8"><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regPass', this)"></i></div>
                 <div class="pill-input"><i class="fa-solid fa-check-circle"></i><input type="password" id="regVerify" placeholder="Verification" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regVerify', this)"></i></div>
-                <div class="auth-actions"><button type="submit" class="btn-pill primary">Sign Up</button></div>
-                <div class="auth-footer">Sudah punya akun? <span class="link-text" onclick="nav('loginPage')">Login</span></div>
+                <div class="auth-actions"><button type="submit" class="btn-pill primary">Sign Up</button><div class="auth-footer">Sudah punya akun? <span class="link-text" onclick="nav('loginPage')">Login</span></div></div>
             </form>
         </div>
     </section>
@@ -71,11 +79,9 @@
                 <div class="storage-widget">
                     <div class="storage-label"><i class="fa-solid fa-cloud"></i> Storage</div>
                     <div class="progress-track"><div id="storageBar" class="progress-fill" style="width: 0%;"></div></div>
-                    <div class="storage-text"><span id="storageUsed">0.00 MB</span> / 2 GB</div>
+                    <div class="storage-text"><span id="storageUsed">0 MB</span> / 2 GB</div>
                 </div>
-                <div class="breadcrumb-area">
-                    <h2 id="headerTitle">Welcome In Drive Morning</h2>
-                </div>
+                <div class="breadcrumb-area"><h2 id="welcomeText">Welcome In Drive</h2></div>
             </div>
 
             <div id="fileGrid" class="file-grid-area"></div>
