--- a/index.html
+++ b/index.html
@@ -15,41 +15,26 @@
 
     <section id="loginPage" class="full-screen-center hidden">
         <div class="glass-card auth-card">
-            <div class="auth-header">
-                <img src="logo.png" alt="Storage Tasks" class="auth-logo">
-                <h3>Login</h3>
-            </div>
+            <div class="auth-header"><img src="logo.png" alt="Logo" class="auth-logo"><h3>Login</h3></div>
             <form id="loginForm">
-                <div class="pill-input">
-                    <i class="fa-solid fa-user"></i>
-                    <input type="text" id="loginEmail" placeholder="Username / email" required>
-                </div>
-                <div class="pill-input">
-                    <i class="fa-solid fa-key"></i>
-                    <input type="password" id="loginPass" placeholder="Password" required>
-                    <i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('loginPass', this)"></i>
-                </div>
-                <div class="auth-actions">
-                    <button type="submit" class="btn-pill primary">Login</button>
-                    <div class="auth-footer">Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span></div>
-                </div>
+                <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="loginEmail" placeholder="Username / Email" required></div>
+                <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="loginPass" placeholder="Password" required></div>
+                <button type="submit" class="btn-pill primary">Login</button>
+                <div class="auth-footer">Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span></div>
             </form>
         </div>
     </section>
 
     <section id="signupPage" class="full-screen-center hidden">
         <div class="glass-card auth-card">
-            <div class="auth-header">
-                <img src="logo.png" alt="Storage Tasks" class="auth-logo">
-                <h3>Sign Up</h3>
-            </div>
+            <div class="auth-header"><h3>Sign Up</h3></div>
             <form id="signupForm">
-                <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="regName" placeholder="Username" required></div>
-                <div class="pill-input"><i class="fa-solid fa-envelope"></i><input type="email" id="regEmail" placeholder="Email" required></div>
-                <div class="pill-input"><i class="fa-solid fa-phone"></i><input type="tel" id="regPhone" placeholder="Phone"></div>
-                <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="regPass" placeholder="Password" required minlength="8"><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regPass', this)"></i></div>
-                <div class="pill-input"><i class="fa-solid fa-check-circle"></i><input type="password" id="regVerify" placeholder="Verification" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regVerify', this)"></i></div>
-                <div class="auth-actions"><button type="submit" class="btn-pill primary">Sign Up</button><div class="auth-footer">Sudah punya akun? <span class="link-text" onclick="nav('loginPage')">Login</span></div></div>
+                <div class="pill-input"><input type="text" id="regName" placeholder="Username" required></div>
+                <div class="pill-input"><input type="email" id="regEmail" placeholder="Email" required></div>
+                <div class="pill-input"><input type="password" id="regPass" placeholder="Password" required></div>
+                <div class="pill-input"><input type="password" id="regVerify" placeholder="Verifikasi" required></div>
+                <button type="submit" class="btn-pill primary">Sign Up</button>
+                <div class="auth-footer"><span class="link-text" onclick="nav('loginPage')">Login</span></div>
             </form>
         </div>
     </section>
@@ -78,10 +63,12 @@
             <div class="content-header">
                 <div class="storage-widget">
                     <div class="storage-label"><i class="fa-solid fa-cloud"></i> Storage</div>
-                    <div class="progress-track"><div id="storageBar" class="progress-fill" style="width: 0%;"></div></div>
-                    <div class="storage-text"><span id="storageUsed">0 MB</span> / 2 GB</div>
+                    <div class="progress-track"><div id="storageBar" class="progress-fill"></div></div>
+                    <div class="storage-text"><span id="storageUsed">0.00 MB</span> / 2 GB</div>
                 </div>
-                <div class="breadcrumb-area"><h2 id="welcomeText">Welcome In Drive</h2></div>
+                <div class="breadcrumb-area">
+                    <h2 id="headerTitle">Welcome In Drive Morning</h2>
+                </div>
             </div>
 
             <div id="fileGrid" class="file-grid-area"></div>
@@ -89,23 +76,19 @@
     </section>
 
     <div id="loading" class="loading-overlay"><div class="spinner"></div><p>Processing...</p></div>
-
     <div id="folderModal" class="modal-overlay hidden">
         <div class="glass-card modal-box">
-            <div class="modal-header"><h3><i class="fa-solid fa-folder-plus"></i> Folder Baru</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('folderModal')"></i></div>
-            <div class="modal-body"><p>Masukkan nama folder:</p><div class="pill-input"><i class="fa-solid fa-folder"></i><input type="text" id="newFolderName" placeholder="Nama Folder"></div></div>
-            <div class="modal-actions"><button class="btn-pill secondary" onclick="closeModal('folderModal')">Batal</button><button class="btn-pill primary" onclick="submitCreateFolder()">Buat</button></div>
+            <div class="modal-header"><h3>Buat Folder</h3><i class="fa-solid fa-xmark" onclick="closeModal('folderModal')"></i></div>
+            <div class="modal-body"><div class="pill-input"><input type="text" id="newFolderName" placeholder="Nama Folder"></div></div>
+            <div class="modal-actions"><button class="btn-pill primary" onclick="submitCreateFolder()">Buat</button></div>
         </div>
     </div>
-
     <div id="uploadModal" class="modal-overlay hidden">
         <div class="glass-card modal-box">
-            <div class="modal-header"><h3><i class="fa-solid fa-cloud-arrow-up"></i> Upload File</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('uploadModal')"></i></div>
-            <div class="modal-body">
-                <div id="dropZone" class="drag-drop-area"><i class="fa-solid fa-cloud-arrow-up cloud-icon"></i><h4>Drag & Drop file di sini</h4><p>atau</p><button class="btn-pill small" onclick="document.getElementById('fileInputHidden').click()">Pilih File</button><input type="file" id="fileInputHidden" hidden></div>
-                <p class="file-info" id="fileInfoText">Belum ada file dipilih</p>
-            </div>
-            <div class="modal-actions"><button class="btn-pill secondary" onclick="closeModal('uploadModal')">Batal</button><button class="btn-pill primary" onclick="submitUploadFile()">Upload</button></div>
+            <div class="modal-header"><h3>Upload File</h3></div>
+            <div id="dropZone" class="drag-drop-area"><h4>Drag & Drop</h4><button class="btn-pill small" onclick="document.getElementById('fileInputHidden').click()">Pilih</button><input type="file" id="fileInputHidden" hidden></div>
+            <p id="fileInfoText">Belum ada file</p>
+            <div class="modal-actions"><button class="btn-pill primary" onclick="submitUploadFile()">Upload</button></div>
         </div>
     </div>
 
