--- a/index.html
+++ b/index.html
@@ -15,12 +15,29 @@
 
     <section id="loginPage" class="full-screen-center hidden">
         <div class="glass-card auth-card">
-            <div class="auth-header"><img src="logo.png" alt="Logo" style="width:120px;"><h3>Login</h3></div>
+            <div class="auth-header">
+                <img src="logo.png" alt="Logo" class="auth-logo">
+                <h3>Login</h3>
+            </div>
             <form id="loginForm">
                 <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="loginEmail" placeholder="Username / Email" required></div>
-                <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="loginPass" placeholder="Password" required></div>
+                <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="loginPass" placeholder="Password" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('loginPass', this)"></i></div>
                 <button type="submit" class="btn-pill primary">Login</button>
                 <div class="auth-footer">Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span></div>
+            </form>
+        </div>
+    </section>
+
+    <section id="signupPage" class="full-screen-center hidden">
+        <div class="glass-card auth-card">
+            <div class="auth-header"><img src="logo.png" alt="Logo" class="auth-logo"><h3>Sign Up</h3></div>
+            <form id="signupForm">
+                <div class="pill-input"><input type="text" id="regName" placeholder="Username" required></div>
+                <div class="pill-input"><input type="email" id="regEmail" placeholder="Email" required></div>
+                <div class="pill-input"><input type="password" id="regPass" placeholder="Password" required></div>
+                <div class="pill-input"><input type="password" id="regVerify" placeholder="Verifikasi" required></div>
+                <button type="submit" class="btn-pill primary">Sign Up</button>
+                <div class="auth-footer"><span class="link-text" onclick="nav('loginPage')">Login</span></div>
             </form>
         </div>
     </section>
@@ -52,18 +69,30 @@
 
             <main class="main-content-area">
                 <div class="search-bar-pill"><i class="fa-solid fa-magnifying-glass"></i><input type="text" id="searchInput" placeholder="Search in Storage Task"></div>
-                <div class="header-info"><h2 id="headerTitle">Welcome In Drive Morning</h2></div>
+                <div class="header-info">
+                    <h2 id="headerTitle">Welcome In Drive Morning</h2>
+                </div>
                 <div id="fileGrid" class="file-grid-area"></div>
             </main>
         </div>
     </section>
 
-    <div id="loading" class="loading-overlay"><div class="spinner"></div></div>
+    <div id="loading" class="loading-overlay"><div class="spinner"></div><p>Processing...</p></div>
     <div id="folderModal" class="modal-overlay hidden">
         <div class="glass-card modal-box">
-            <div class="modal-header"><h3>Buat Folder</h3></div>
+            <div class="modal-header"><h3>Buat Folder</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('folderModal')"></i></div>
             <div class="modal-body"><div class="pill-input"><input type="text" id="newFolderName" placeholder="Nama Folder"></div></div>
             <div class="modal-actions"><button class="btn-pill primary" onclick="submitCreateFolder()">Buat</button></div>
+        </div>
+    </div>
+    <div id="uploadModal" class="modal-overlay hidden">
+        <div class="glass-card modal-box">
+            <div class="modal-header"><h3>Upload File</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('uploadModal')"></i></div>
+            <div class="modal-body">
+                <div id="dropZone" class="drag-drop-area"><h4>Drag & Drop File</h4><button class="btn-pill small" onclick="document.getElementById('fileInputHidden').click()">Pilih</button><input type="file" id="fileInputHidden" hidden></div>
+                <p id="fileInfoText" class="file-info">Belum ada file dipilih</p>
+            </div>
+            <div class="modal-actions"><button class="btn-pill primary" onclick="submitUploadFile()">Upload</button></div>
         </div>
     </div>
 
