--- a/index.html
+++ b/index.html
@@ -20,31 +20,60 @@
                 <h3>Login</h3>
             </div>
             <form id="loginForm">
-                <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="loginEmail" placeholder="Username / Email" required></div>
-                <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="loginPass" placeholder="Password" required></div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-user"></i>
+                    <input type="text" id="loginEmail" placeholder="Username / Email" required>
+                </div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-key"></i>
+                    <input type="password" id="loginPass" placeholder="Password" required>
+                </div>
                 <button type="submit" class="btn-pill primary">Login</button>
-                <div class="auth-footer">Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span></div>
+                <div class="auth-footer">
+                    Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span>
+                </div>
             </form>
         </div>
     </section>
 
     <section id="signupPage" class="full-screen-center hidden">
         <div class="glass-card auth-card">
-            <div class="auth-header"><img src="logo.png" alt="Logo" class="auth-logo"><h3>Sign Up</h3></div>
+            <div class="auth-header">
+                <img src="logo.png" alt="Logo" class="auth-logo">
+                <h3>Sign Up</h3>
+            </div>
             <form id="signupForm">
-                <div class="pill-input"><input type="text" id="regName" placeholder="Username" required></div>
-                <div class="pill-input"><input type="email" id="regEmail" placeholder="Email" required></div>
-                <div class="pill-input"><input type="password" id="regPass" placeholder="Password" required></div>
-                <div class="pill-input"><input type="password" id="regVerify" placeholder="Verifikasi" required></div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-user"></i>
+                    <input type="text" id="regName" placeholder="Username" required>
+                </div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-envelope"></i>
+                    <input type="email" id="regEmail" placeholder="Email" required>
+                </div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-phone"></i>
+                    <input type="tel" id="regPhone" placeholder="Phone">
+                </div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-key"></i>
+                    <input type="password" id="regPass" placeholder="Password" required>
+                </div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-check-circle"></i>
+                    <input type="password" id="regVerify" placeholder="Verifikasi Password" required>
+                </div>
                 <button type="submit" class="btn-pill primary">Sign Up</button>
-                <div class="auth-footer"><span class="link-text" onclick="nav('loginPage')">Login</span></div>
+                <div class="auth-footer">
+                    Sudah punya akun? <span class="link-text" onclick="nav('loginPage')">Login</span>
+                </div>
             </form>
         </div>
     </section>
 
     <section id="dashboardPage" class="dashboard-layout hidden">
         <header class="top-nav">
-            <div class="brand-area"><img src="logo.png" alt="Logo" style="height: 40px;"></div>
+            <div class="brand-area"><img src="logo.png" alt="Logo" style="height: 45px;"></div>
             <div class="profile-area">
                 <img src="user.jpg" alt="User" class="avatar">
                 <button id="logoutBtn" class="btn-pill small">LogOut</button>
@@ -52,8 +81,9 @@
         </header>
 
         <div class="main-glass-panel">
+            
             <aside class="sidebar-left">
-                <div class="new-btn-wrapper">
+                <div class="new-btn-wrapper" id="dropdownContainer">
                     <button class="btn-pill new-btn" onclick="toggleDropdown()">
                         <i class="fa-solid fa-plus"></i> New
                     </button>
@@ -62,6 +92,7 @@
                         <a onclick="triggerUploadModal()"><i class="fa-solid fa-cloud-arrow-up"></i> Upload File</a>
                     </div>
                 </div>
+
                 <div class="storage-widget">
                     <div class="storage-label"><i class="fa-solid fa-cloud"></i> Storage</div>
                     <div class="progress-track"><div id="storageBar" class="progress-fill"></div></div>
@@ -70,29 +101,65 @@
             </aside>
 
             <main class="main-content-area">
-                <div class="search-bar-pill"><i class="fa-solid fa-magnifying-glass"></i><input type="text" id="searchInput" placeholder="Search in Storage Task"></div>
-                <div class="header-info"><h2 id="headerTitle">Welcome In Drive Morning</h2></div>
+                <div class="search-row">
+                    <div class="search-bar-pill">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="text" id="searchInput" placeholder="Search in Storage Task">
+                    </div>
+                </div>
+
+                <div class="header-info">
+                    <h2 id="headerTitle">Welcome In Drive Morning</h2>
+                </div>
+
                 <div id="fileGrid" class="file-grid-area"></div>
             </main>
+
         </div>
     </section>
 
-    <div id="loading" class="loading-overlay"><div class="spinner"></div><p>Processing...</p></div>
+    <div id="loading" class="loading-overlay hidden">
+        <div class="spinner"></div>
+        <p>Processing...</p>
+    </div>
+
     <div id="folderModal" class="modal-overlay hidden">
         <div class="glass-card modal-box">
-            <div class="modal-header"><h3>Buat Folder</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('folderModal')"></i></div>
-            <div class="modal-body"><div class="pill-input"><input type="text" id="newFolderName" placeholder="Nama Folder"></div></div>
-            <div class="modal-actions"><button class="btn-pill primary" onclick="submitCreateFolder()">Buat</button></div>
+            <div class="modal-header">
+                <h3>Buat Folder</h3>
+                <i class="fa-solid fa-xmark close-icon" onclick="closeModal('folderModal')"></i>
+            </div>
+            <div class="modal-body">
+                <div class="pill-input">
+                    <i class="fa-solid fa-folder"></i>
+                    <input type="text" id="newFolderName" placeholder="Nama Folder Baru">
+                </div>
+            </div>
+            <div class="modal-actions">
+                <button class="btn-pill primary" onclick="submitCreateFolder()">Buat</button>
+            </div>
         </div>
     </div>
+
     <div id="uploadModal" class="modal-overlay hidden">
         <div class="glass-card modal-box">
-            <div class="modal-header"><h3>Upload File</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('uploadModal')"></i></div>
+            <div class="modal-header">
+                <h3>Upload File</h3>
+                <i class="fa-solid fa-xmark close-icon" onclick="closeModal('uploadModal')"></i>
+            </div>
             <div class="modal-body">
-                <div id="dropZone" class="drag-drop-area"><h4>Drag & Drop File</h4><button class="btn-pill small" onclick="document.getElementById('fileInputHidden').click()">Pilih</button><input type="file" id="fileInputHidden" hidden></div>
+                <div id="dropZone" class="drag-drop-area">
+                    <i class="fa-solid fa-cloud-arrow-up" style="font-size: 3rem; margin-bottom: 10px; opacity: 0.5;"></i>
+                    <h4>Drag & Drop File di sini</h4>
+                    <p>atau</p>
+                    <button class="btn-pill small" onclick="document.getElementById('fileInputHidden').click()">Pilih File</button>
+                    <input type="file" id="fileInputHidden" hidden>
+                </div>
                 <p id="fileInfoText" class="file-info">Belum ada file dipilih</p>
             </div>
-            <div class="modal-actions"><button class="btn-pill primary" onclick="submitUploadFile()">Upload</button></div>
+            <div class="modal-actions">
+                <button class="btn-pill primary" onclick="submitUploadFile()">Upload Sekarang</button>
+            </div>
         </div>
     </div>
 
